[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interactables/Zones/Interactable_Zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interactables/storage.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.523199, 0.28636, 0.591734 )

[sub_resource type="CubeMesh" id=2]

[node name="Storage" type="StaticBody"]
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.181709, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.1, 0, 0, 0, 0.49, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="InteractZone" parent="." instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 1

[node name="CollisionShape" type="CollisionShape" parent="InteractZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.181709, 0 )
shape = SubResource( 1 )

[node name="ItemSpot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
[connection signal="interaction_received" from="InteractZone" to="." method="_on_InteractZone_interaction_received"]
